<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/filtro"
                android:textColor="#121212"
                android:textColorHighlight="#000000"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/SubTituloFiltro"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="62dp"
                android:layout_height="15dp"
                android:text="@string/tvHasta"
                app:layout_constraintStart_toEndOf="@+id/bttdateFrom"
                app:layout_constraintStart_toStartOf="@+id/bttDateTo"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/desde"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/bttdateFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dateFormat"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/bttDateTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/dateFormat"
                app:layout_constraintStart_toEndOf="@+id/barrier2"
                app:layout_constraintTop_toTopOf="@+id/bttdateFrom" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="textView3,bttdateFrom"
                tools:layout_editor_absoluteX="154dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/SubTituloFiltro"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/bttdateFrom" />

            <TextView
                android:id="@+id/tvMinMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="0€"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="  -  "
                app:layout_constraintEnd_toStartOf="@+id/tvMaxMoney"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvMinMoney"
                app:layout_constraintTop_toTopOf="@+id/tvMinMoney" />

            <TextView
                android:id="@+id/tvMaxMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300€"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/tvMinMoney" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/sldImporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:valueFrom="1"
                android:valueTo="300"
                app:values="@array/initial_values"
                style="@style/Widget.App.Slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMinMoney" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/byState"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/sldImporte" />

            <CheckBox
                android:id="@+id/cbPagada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pagada"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <CheckBox
                android:id="@+id/cbAnulada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/anulada"
                app:layout_constraintStart_toStartOf="@+id/cbPagada"
                app:layout_constraintTop_toBottomOf="@+id/cbPagada" />

            <CheckBox
                android:id="@+id/cbCuotaFigada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cuotaFija"
                app:layout_constraintStart_toStartOf="@+id/cbAnulada"
                app:layout_constraintTop_toBottomOf="@+id/cbAnulada" />

            <CheckBox
                android:id="@+id/cbPendientePago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pendientePago"
                app:layout_constraintStart_toStartOf="@+id/cbCuotaFigada"
                app:layout_constraintTop_toBottomOf="@+id/cbCuotaFigada" />

            <CheckBox
                android:id="@+id/cbPlanPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/planPago"
                app:layout_constraintStart_toStartOf="@+id/cbPendientePago"
                app:layout_constraintTop_toBottomOf="@+id/cbPendientePago" />

            <Button
                android:id="@+id/bttAplicar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/aplicar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbPlanPago" />

            <Button
                android:id="@+id/bttEliminarFiltro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:text="@string/eliminarFiltro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bttAplicar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>